--- a/style.css
+++ b/style.css
@@ -296,7 +296,8 @@ body {
 
 .display {
   background: no-repeat left 15px url(img/mobile.svg);
-  margin: 60px 0 40px 50px;
+  margin: 60px 0 30px 50px;
+  height: 70px;
 }
 
 .block__display {
@@ -328,7 +329,7 @@ body {
   display: run-in;
   align-items: flex-start;
   background: no-repeat left 20px url(img/wifi.svg);
-  margin: 0 0 30px 50px;
+  margin: 0 0 27px 50px;
 }
 
 .wifi__title {
@@ -1257,7 +1258,7 @@ body {
   }
 }
 
-@media screen and (min-width: 376px) and (max-width: 768px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
   .wrapper {
     width: 768px;
   }
@@ -1329,13 +1330,13 @@ body {
   }
 
   .main-distance__title {
-    margin: 2px 0 0 60px;
+    margin: 5px 0 0 60px;
     font: 600 50px/61px montserrat, arial, helvetica, sans-serif;
   }
 
   .main-speed__text,
   .main-distance__text {
-    margin: 25px 10px 0 10px;
+    margin: 30px 10px 0 10px;
     font: 600 20px/24px montserrat, arial, helvetica, sans-serif;
   }
 
@@ -1345,9 +1346,14 @@ body {
   }
 
   .main-distance__item {
-    margin-bottom: 10;
+    margin-top: 5px;
+    margin-bottom: 10px;
     margin-left: 60px;
     font: 400 12px/15px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .distance__item {
+    margin-left: 53px;
   }
 
   .main__button {
@@ -1404,17 +1410,17 @@ body {
   }
 
   .block__title {
-    margin-top: 60px;
+    margin-top: 55px;
     margin-left: 35px;
   }
 
   .block__subtitle {
-    margin-top: 20px;
+    margin-top: 25px;
     margin-left: 35px;
   }
 
   .block__functions {
-    margin-right: 85px;
+    margin-right: 82px;
   }
 
   .block__display {
@@ -1422,7 +1428,7 @@ body {
   }
 
   .display {
-    margin-bottom: 19px;
+    margin: 50px 0 25px 50px;
   }
 
   .display__title {
@@ -1435,12 +1441,12 @@ body {
     margin-top: 18px;
   }
 
-  .distance__item {
-    margin-left: 53px;
+  .display__item {
+    margin-top: 5px;
   }
 
   .wifi {
-    background: no-repeat left 18px url(img/wifi.svg);
+    background: no-repeat left 15px url(img/wifi.svg);
     margin-left: 45px;
     margin-bottom: 22px;
   }
@@ -1452,7 +1458,7 @@ body {
   }
 
   .volume {
-    margin-left: 45px;
+
   }
 
   .section-button {
@@ -1604,6 +1610,256 @@ body {
 
   .five,
   .footer__icon {
+    display: none;
+  }
+}
+
+@media  screen and (min-width: 376px) and (max-width: 425px) {
+  .wrapper {
+    width: 425px;
+  }
+
+  .header {
+    width: 100%;
+  }
+
+  .logo {
+    margin-top: 5px;
+  }
+
+  .logo__icon {
+    width: 138px;
+    height: 42px;
+  }
+
+  .menu,
+  .menu-ru__item {
+    display: none;
+  }
+
+  .menu-ru {
+    margin-top: 20px;
+  }
+
+  .menu__line {
+    margin-bottom: 15px;
+  }
+
+  .main {
+    background: no-repeat center 80px url(img/mobile/background.svg);
+  }
+
+  .main__title {
+    margin-top: 20px;
+    font: 600 50px/61px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main__subtitle {
+    font: 500 10px/12px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .tesla-main {
+    margin: 34px 0 -4px 0;
+    width: 357px;
+    height: 166px;
+  }
+
+  .main__row {
+    width: 85%;
+    margin: auto;
+    display: block;
+  }
+
+  .main__icon {
+    margin-bottom: 7px;
+  }
+
+  .main__column {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin: auto;
+    margin-bottom: 43px;
+  }
+
+  .speed{
+    background: no-repeat left 33px url(img/mobile/speed.svg);
+  }
+
+  .main-speed__column {
+    margin-right: 0px;
+    height: 55px;
+  }
+
+  .main-speed__title {
+    margin: 23px 3px 0 50px;
+    font: 600 27px/33px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main-distance__title {
+    font: 600 27px/33px montserrat, arial, helvetica, sans-serif;
+    margin-left: 35px;
+    margin-top: 25px;
+    margin-right: 5px;
+  }
+
+  .main-speed__text,
+  .main-distance__text {
+    margin-top: 35px;
+    margin-left: 5px;
+    margin-right: 5px;
+    font: 600 15px/18px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main-speed__item {
+    margin-left: 50px;
+    font: 400 10px/12px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main-distance__item {
+    margin-bottom: 0;
+    margin-left: 38px;
+    font: 400 10px/12px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .distance {
+    background: no-repeat left 26px url(img/mobile/road.svg);
+  }
+
+  .main__button {
+    background: no-repeat left url(img/mobile/wheel.svg);
+    width: 95%;
+    margin: auto;
+    justify-content: space-between;
+  }
+
+  .main-text__button {
+    margin-top: 10px;
+    margin-right: 15px;
+    margin-left: 30px;
+  }
+
+  .main-buy__button {
+    margin-top: 0;
+    padding: 10px 43px;
+    color: #fff;
+    outline: solid 2px #fff;
+    background: #e51937;
+  }
+
+  .dropdown {
+    margin-left: 50%;
+    margin-top: 25px;
+  }
+
+  .main2 {
+    display: block;
+    width: 425px;
+    background: no-repeat left -75px url(img/mobile/salon.svg);
+    background-size: 430px;
+  }
+
+  .main2__title {
+    margin: auto;
+    font-size: 0;
+  }
+
+  .block {
+    margin-top: 202px;
+    width: 425px;
+    height: 304px;
+  }
+
+  .block__title {
+    padding-top: 19px;
+    margin-left: 28px;
+  }
+
+  .block__subtitle {
+    width: 370px;
+    margin-left: 29px;
+    margin-top: 10px;
+  }
+
+  .footer__right {
+    background: no-repeat 0px 75px url(img/mobile/mobcar.svg);
+    width: 425px;
+    height: 253px;
+  }
+
+  .footer__text {
+    overflow: hidden;
+    z-index: -1;
+    margin-top: 36px;
+    margin-left: -7px;
+    font: 600 100px/100px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .security {
+    margin-top: 0;
+    margin-left: 0;
+  }
+
+  .security {
+    font: 600 7px/7px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .security-1 {
+    width: 60px;
+    margin-top: 75px;
+  }
+
+  .security-2 {
+    margin-top: 57px;
+  }
+
+  .security-3 {
+
+  }
+
+  .line__item1 {
+    margin-top: 75px;
+    margin-left: 89px;
+    height: 97px;
+  }
+
+  .line__item2 {
+    margin-top: 59px;
+    margin-left: 185px;
+    height: 46px;
+  }
+
+  .line__item3 {
+    margin-top: 201px;
+    margin-left: 205px;
+    height: 41px;
+  }
+
+  .footer__left{
+    order: 2;
+    margin-top: 40px;
+    width: 425px;
+    height: 303px;
+  }
+
+  .footer__title,
+  .footer__subtitle {
+    width: 320px;
+    margin-left: 32px;
+    margin-right: 17px;
+    margin-top: 16px;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .block__functions,
+  .section-button,
+  .info,
+  .footer__icon,
+  .footer-button {
     display: none;
   }
 }
