--- a/style.css
+++ b/style.css
@@ -615,16 +615,27 @@ body {
 
   .main {
     background: no-repeat center 0 url(img/tesla-wordmark-big.svg);
-    background-size: 1200px;
+    background-size: 950px;
+  }
+
+  .main__title {
+    margin-top: 40px;
+    font-size: 80px;
+  }
+
+  .main__icon {
+    margin-bottom: 0;
   }
 
   .tesla-main {
-    width: 750px;
+    margin-bottom: 0;
+    width: 700px;
   }
 
   .main__row {
     width: 60%;
     margin: auto;
+    margin-bottom: 15px;
   }
 
   .main-speed__column {
@@ -906,18 +917,18 @@ body {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 940px) {
+@media screen and (min-width: 751px) and (max-width: 940px) {
   .wrapper {
-    width: 940px;
+    width: 100vw;
   }
 
   .logo {
     margin-right: 0;
   }
 
-  .menu__item,
+  .menu,
   .menu-ru__item {
-    font-size: 13px;
+    display: none;
   }
 
   .header {
@@ -1023,7 +1034,7 @@ body {
 
   .dropdown  {
     margin-top: 50px;
-    margin-left: 49%;
+    margin-left: 50%;
     margin-bottom: 65px;
   }
 
@@ -1032,17 +1043,16 @@ body {
     background-size: 950px;
     display: flex;
     flex-direction: column;
-    width: 940px;
+    width: 100vw;
   }
 
   .main2__title {
     margin-top: 10px;
-    margin-left: 565px;
   }
 
   .block {
     margin-top: 448px;
-    width: 940px;
+    width: 100vw;
     height: 487px;
   }
 
@@ -1059,7 +1069,6 @@ body {
   .block__subtitle {
     margin-top: 20px;
     margin-left: 35px;
-    padding-right: 80px;
   }
 
   .block__functions {
@@ -1130,13 +1139,12 @@ body {
 
   .footer__left{
     order: 2;
-    width: 940px;
+    width: 100vw;
     height: 487px;
     margin-top: 40px;
   }
 
   .footer__item {
-    margin-right: 150px;
     width: 350px;
   }
 
@@ -1198,13 +1206,13 @@ body {
   .footer__right {
     order: 1;
     background: no-repeat 0 110px url(img/ipad/ipadcar.svg);
-    width: 940px;
+    width: 100vw;
     height: 500px;
   }
 
   .footer__text {
     z-index: -1;
-    font: 600 178px/180px montserrat, arial, helvetica, sans-serif;
+    font: 600 162px/180px montserrat, arial, helvetica, sans-serif;
     margin-top: 40px;
     margin-left: 100px;
   }
@@ -1258,365 +1266,9 @@ body {
   }
 }
 
-@media screen and (min-width: 426px) and (max-width: 768px) {
+@media screen and (min-width: 451px) and (max-width: 750px) {
   .wrapper {
-    width: 768px;
-  }
-
-  .menu__line {
-    display: none;
-  }
-
-  .menu,
-  .menu-ru__item {
-    display: none;
-  }
-
-  .header {
-    width: 96%;
-    background: no-repeat 97% 40px url(img/ipad/menu.svg);
-  }
-
-  .tesla-main {
-    margin-bottom: 20px;
-    width: 703px;
-    height: 328px;
-  }
-
-  .main {
-    background: no-repeat center top 80px url(img/ipad/background.svg);
-  }
-
-  .main__title {
-    margin-top: 90px;
-    line-height: 85px;
-  }
-
-  .main__column{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 37px;
-  }
-  .tesla__title {
-    margin-bottom: 85px;
-  }
-
-  .main__row {
-    display: block;
-    width: 63%;
-    margin: auto;
-  }
-
-  .speed{
-    background: no-repeat left 20px url(img/ipad/speed.svg);
-  }
-
-  .distance {
-    background: no-repeat left 15px url(img/ipad/road.svg);
-  }
-
-  .main-speed__column {
-    height: 60px;
-    margin-right: 0px;
-  }
-
-  .main-distance__column {
-    height: 60px;
-  }
-
-  .main-speed__title {
-    margin: 5px 0px 0 85px;
-    font: 600 50px/61px montserrat, arial, helvetica, sans-serif;
-  }
-
-  .main-distance__title {
-    margin: 5px 0 0 60px;
-    font: 600 50px/61px montserrat, arial, helvetica, sans-serif;
-  }
-
-  .main-speed__text,
-  .main-distance__text {
-    margin: 30px 10px 0 10px;
-    font: 600 20px/24px montserrat, arial, helvetica, sans-serif;
-  }
-
-  .main-speed__item {
-    margin-left: 85px;
-    font: 400 12px/15px montserrat, arial, helvetica, sans-serif;
-  }
-
-  .main-distance__item {
-    margin-top: 5px;
-    margin-bottom: 10px;
-    margin-left: 60px;
-    font: 400 12px/15px montserrat, arial, helvetica, sans-serif;
-  }
-
-  .distance__item {
-    margin-left: 53px;
-  }
-
-  .main__button {
-    display: flex;
-    justify-content: space-between;
-    width: 86%;
-    margin: auto;
-    background: no-repeat left 26px url(img/ipad/wheel.svg);
-  }
-
-  .main-text__button {
-    margin-left: 45px;
-    margin-top: 35px;
-    font: 700 16px/20px montserrat, arial, helvetica, sans-serif;
-  }
-
-  .main-buy__button {
-    font: 700 13px/16px montserrat, arial, helvetica, sans-serif;
-    margin-top: 15px;
-    color: #fff;
-    padding: 20px 73px;
-    outline: solid 2px #fff;
-    background: #e51937;
-  }
-
-  .dropdown  {
-    margin-top: 50px;
-    margin-left: 49%;
-    margin-bottom: 65px;
-  }
-
-  .main2{
-    background: no-repeat left 0 url(img/ipad/salon.png);
-    display: flex;
-    flex-direction: column;
-    width: 768px;
-  }
-
-  .main2__title {
-    margin-top: 10px;
-    margin-left: 435px;
-    font: 600 70px/85px montserrat, arial, helvetica, sans-serif;
-  }
-
-  .block {
-    margin-top: 348px;
-    width: 768px;
-    height: 487px;
-  }
-
-  .main2__functions {
-    display: flex;
-    margin-bottom: 50px;
-  }
-
-  .block__title {
-    margin-top: 55px;
-    margin-left: 35px;
-  }
-
-  .block__subtitle {
-    margin-top: 25px;
-    margin-left: 35px;
-  }
-
-  .block__functions {
-    margin-right: 82px;
-  }
-
-  .block__display {
-    height: 43px;
-  }
-
-  .display {
-    margin: 50px 0 25px 50px;
-  }
-
-  .display__title {
-  margin-top: 3px;
-  margin-right: 10px;
-  margin-left: 55px;
-  }
-
-  .display__subtitle {
-    margin-top: 18px;
-  }
-
-  .display__item {
-    margin-top: 5px;
-  }
-
-  .wifi {
-    background: no-repeat left 15px url(img/wifi.svg);
-    margin-left: 45px;
-    margin-bottom: 22px;
-  }
-
-  .wifi__title,
-  .wifi__item {
-    margin-left: 65px;
-    margin-top: 2px;
-  }
-
-  .volume {
-
-  }
-
-  .section-button {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 56px;
-    width: 60%;
-    background: no-repeat left url(img/ipad/more.svg);
-  }
-
-  .text__button {
-    font: 700 16px/20px montserrat, arial, helvetica, sans-serif;
-    margin-left: 45px;
-    margin-top: 15px;
-  }
-
-  .buy__button {
-    font: 700 16px/20px montserrat, arial, helvetica, sans-serif;
-    padding: 15px 65px;
-  }
-
-  .footer {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .footer__left{
-    order: 2;
-    width: 768px;
-    height: 487px;
-    margin-top: 40px;
-  }
-
-  .footer__item {
-    width: 350px;
-  }
-
-  .footer__title,
-  .footer__subtitle {
-    margin-left: 34px;
-    width: 330px;
-  }
-
-  .footer__title {
-    margin-top: 63px;
-  }
-
-  .footer__subtitle {
-    margin-top: 10px;
-  }
-
-  .footer__info {
-    display: flex;
-  }
-
-  .protection {
-    margin-top: 63px;
-    margin-left: 72px;
-  }
-
-  .location {
-    margin-top: 27px;
-    margin-left: 72px;
-  }
-
-  .quality {
-    padding-right: 40px;
-  }
-
-  .front {
-    margin-right: 60px;
-  }
-
-  .footer-button {
-    display: flex;
-    justify-content: space-between;
-    background: no-repeat left url(img/ipad/more.svg);
-    margin-top: 58px;
-    width: 60%;
-  }
-
-  .more__button {
-    margin-top: 15px;
-    margin-left: 45px;
-    font: 700 16px/20px montserrat, arial, helvetica, sans-serif;
-  }
-
-  .order__button {
-    font: 700 16px/20px montserrat, arial, helvetica, sans-serif;
-    padding: 15px 65px;
-  }
-
-  .footer__right {
-    order: 1;
-    background: no-repeat 0 110px url(img/ipad/ipadcar.svg);
-    width: 768px;
-    height: 500px;
-  }
-
-  .footer__text {
-    z-index: -1;
-    font: 600 148px/180px montserrat, arial, helvetica, sans-serif;
-    margin-top: 40px;
-    margin-left: 80px;
-  }
-
-  .item1 {
-    margin-top: 115px;
-    margin-left: 173px;
-  }
-
-  .item2 {
-    margin-top: 83px;
-    margin-left: 372px;
-  }
-
-  .item3 {
-    margin-top: 365px;
-    margin-left: 412px;
-  }
-
-  .security {
-    font: 600 15px/13px montserrat, arial, helvetica, sans-serif;
-  }
-
-  .security-1,
-  .security-2,
-  .security-3 {
-    width: 130px;
-  }
-
-  .security-3 {
-    margin-top: 58px;
-    margin-left: 10px;
-    width: 180px;
-  }
-
-  .line__item1 {
-    height: 201px;
-  }
-
-  .line__item2 {
-    height: 94px;
-  }
-
-  .line__item3 {
-    height: 87px;
-  }
-
-  .five,
-  .footer__icon {
-    display: none;
-  }
-}
-
-@media  screen and (min-width: 376px) and (max-width: 425px) {
-  .wrapper {
-    width: 425px;
+    width: 100vw;
   }
 
   .header {
@@ -1646,7 +1298,8 @@ body {
   }
 
   .main {
-    background: no-repeat center 80px url(img/mobile/background.svg);
+    background: no-repeat center 25px url(img/mobile/background.svg);
+    background-size: 100vw;
   }
 
   .main__title {
@@ -1659,19 +1312,19 @@ body {
   }
 
   .tesla-main {
-    margin: 34px 0 -4px 0;
-    width: 357px;
-    height: 166px;
-  }
-
-  .main__row {
-    width: 85%;
-    margin: auto;
-    display: block;
+    margin: 10px 0 -4px 0;
+    width: 80vw;
   }
 
   .main__icon {
+    background-size: 100vw;
     margin-bottom: 7px;
+  }
+
+  .main__row {
+    width: 75%;
+    margin: auto;
+    display: block;
   }
 
   .main__column {
@@ -1754,9 +1407,9 @@ body {
 
   .main2 {
     display: block;
-    width: 425px;
+    width: 100vw;
     background: no-repeat left -75px url(img/mobile/salon.svg);
-    background-size: 430px;
+    background-size: 100vw 400px;
   }
 
   .main2__title {
@@ -1766,7 +1419,7 @@ body {
 
   .block {
     margin-top: 202px;
-    width: 425px;
+    width: 100vw;
     height: 304px;
   }
 
@@ -1776,19 +1429,22 @@ body {
   }
 
   .block__subtitle {
-    width: 370px;
+    width: 80vw;
     margin-left: 29px;
     margin-top: 10px;
   }
 
+  .main2__text {
+    margin-left: 35px;
+  }
+
   .footer__right {
-    background: no-repeat 0px 75px url(img/mobile/mobcar.svg);
-    width: 425px;
+    background: no-repeat 0px 75px url(img/mobile/mobcar2.svg);
+    width: 100vw;
     height: 253px;
   }
 
   .footer__text {
-    overflow: hidden;
     z-index: -1;
     margin-top: 36px;
     margin-left: -7px;
@@ -1799,6 +1455,19 @@ body {
     margin-top: 0;
     margin-left: 0;
   }
+
+  .item1{
+    margin-left: 120px;
+  }
+
+  .item2 {
+    margin-left: 120px;
+  }
+
+  .item3 {
+    margin-left: 120px;
+  }
+
 
   .security {
     font: 600 7px/7px montserrat, arial, helvetica, sans-serif;
@@ -1838,13 +1507,17 @@ body {
   .footer__left{
     order: 2;
     margin-top: 40px;
-    width: 425px;
+    width: 100vw;
     height: 303px;
+  }
+
+  .footer__info {
+    margin-left: 35px;
   }
 
   .footer__title,
   .footer__subtitle {
-    width: 320px;
+    width: 80vw;
     margin-left: 32px;
     margin-right: 17px;
     margin-top: 16px;
@@ -1862,11 +1535,12 @@ body {
   .footer-button {
     display: none;
   }
+
 }
 
-@media (max-width: 375px) {
+@media screen and (min-width: 376px) and (max-width: 450px) {
   .wrapper {
-    width: 375px;
+    width: 100vw;
   }
 
   .header {
@@ -1910,7 +1584,251 @@ body {
 
   .tesla-main {
     margin: 34px 0 -4px 0;
-    width: 357px;
+    height: 166px;
+  }
+
+  .main__row {
+    width: 85%;
+    margin: auto;
+    display: block;
+  }
+
+  .main__icon {
+    margin-bottom: 7px;
+  }
+
+  .main__column {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin: auto;
+    margin-bottom: 43px;
+  }
+
+  .speed{
+    background: no-repeat left 33px url(img/mobile/speed.svg);
+  }
+
+  .main-speed__column {
+    margin-right: 0px;
+    height: 55px;
+  }
+
+  .main-speed__title {
+    margin: 23px 3px 0 50px;
+    font: 600 27px/33px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main-distance__title {
+    font: 600 27px/33px montserrat, arial, helvetica, sans-serif;
+    margin-left: 35px;
+    margin-top: 25px;
+    margin-right: 5px;
+  }
+
+  .main-speed__text,
+  .main-distance__text {
+    margin-top: 35px;
+    margin-left: 5px;
+    margin-right: 5px;
+    font: 600 15px/18px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main-speed__item {
+    margin-left: 50px;
+    font: 400 10px/12px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main-distance__item {
+    margin-bottom: 0;
+    margin-left: 38px;
+    font: 400 10px/12px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .distance {
+    background: no-repeat left 26px url(img/mobile/road.svg);
+  }
+
+  .main__button {
+    background: no-repeat left url(img/mobile/wheel.svg);
+    width: 95%;
+    margin: auto;
+    justify-content: space-between;
+  }
+
+  .main-text__button {
+    margin-top: 10px;
+    margin-right: 15px;
+    margin-left: 30px;
+  }
+
+  .main-buy__button {
+    margin-top: 0;
+    padding: 10px 40px;
+    color: #fff;
+    outline: solid 2px #fff;
+    background: #e51937;
+  }
+
+  .dropdown {
+    margin-left: 178px;
+    margin-top: 25px;
+  }
+
+  .main2 {
+    display: block;
+    width: 100vw;
+    background: no-repeat left -40px url(img/mobile/salon2.svg);
+    background-size: 100vw;
+  }
+
+  .main2__title {
+    margin: auto;
+    font-size: 0;
+  }
+
+  .block {
+    margin-top: 175px;
+    width: 100vw;
+    height: 304px;
+  }
+
+  .block__title {
+    padding-top: 19px;
+    margin-left: 28px;
+  }
+
+  .block__subtitle {
+    width: 340px;
+    margin-left: 29px;
+    margin-top: 10px;
+  }
+
+  .footer__right {
+    background: no-repeat 0px 75px url(img/mobile/mobcar.svg);
+    width: 100vw;
+    height: 253px;
+  }
+
+  .footer__text {
+    overflow: hidden;
+    z-index: -1;
+    margin-top: 36px;
+    margin-left: 50px;
+    font: 600 100px/100px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .security {
+    margin-top: 0;
+    margin-left: 0;
+  }
+
+  .security {
+    font: 600 7px/7px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .security-1 {
+    width: 60px;
+    margin-top: 75px;
+  }
+
+  .security-2 {
+    margin-top: 57px;
+  }
+
+  .line__item1 {
+    margin-top: 75px;
+    margin-left: 89px;
+    height: 97px;
+  }
+
+  .line__item2 {
+    margin-top: 59px;
+    margin-left: 185px;
+    height: 46px;
+  }
+
+  .line__item3 {
+    margin-top: 201px;
+    margin-left: 205px;
+    height: 41px;
+  }
+
+  .footer__left{
+    order: 2;
+    margin-top: 40px;
+    width: 100vw;
+    height: 303px;
+  }
+
+  .footer__title,
+  .footer__subtitle {
+    width: 320px;
+    margin-left: 32px;
+    margin-right: 17px;
+    margin-top: 16px;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .block__functions,
+  .section-button,
+  .info,
+  .footer__icon,
+  .footer-button {
+    display: none;
+  }
+}
+
+@media (max-width: 375px) {
+  .wrapper {
+    width: 100vw;
+  }
+
+  .header {
+    width: 100%;
+  }
+
+  .logo {
+    margin-top: 5px;
+  }
+
+  .logo__icon {
+    width: 138px;
+    height: 42px;
+  }
+
+  .menu,
+  .menu-ru__item {
+    display: none;
+  }
+
+  .menu-ru {
+    margin-top: 20px;
+  }
+
+  .menu__line {
+    margin-bottom: 15px;
+  }
+
+  .main {
+    background: no-repeat center 80px url(img/mobile/background.svg);
+  }
+
+  .main__title {
+    margin-top: 20px;
+    font: 600 50px/61px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main__subtitle {
+    font: 500 10px/12px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .tesla-main {
+    margin: 34px 0 -4px 0;
     height: 166px;
   }
 
@@ -2004,7 +1922,7 @@ body {
 
   .main2 {
     display: block;
-    width: 375px;
+    width: 100vw;
     background: no-repeat left -40px url(img/mobile/salon.svg);
   }
 
@@ -2015,7 +1933,7 @@ body {
 
   .block {
     margin-top: 202px;
-    width: 375px;
+    width: 100vw;
     height: 304px;
   }
 
@@ -2032,7 +1950,7 @@ body {
 
   .footer__right {
     background: no-repeat 0px 75px url(img/mobile/mobcar.svg);
-    width: 375px;
+    width: 100vw;
     height: 253px;
   }
 
@@ -2087,7 +2005,7 @@ body {
   .footer__left{
     order: 2;
     margin-top: 40px;
-    width: 375px;
+    width: 100vw;
     height: 303px;
   }
 
