--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
   margin: 0 auto;
 }
 
-
 .header {
   display: flex;
   justify-content: space-between;
@@ -129,7 +128,7 @@ body {
 
 .main__icon {
   display: flex;
-  justify-content: center;
+  margin-left: 200px;
   margin-bottom: 13px;
 }
 
@@ -261,7 +260,7 @@ body {
 }
 
 .main2__title {
-  margin-top: 60px;
+  margin-top: 65px;
   margin-left: 80px;
   font: 600 70px/85px montserrat, arial, helvetica, sans-serif;
   color: #e51937;
@@ -497,7 +496,7 @@ body {
 .five__title {
   margin-left: 86px;
   margin-bottom: 0;
-  margin-top: 0;
+  margin-top: 10px;
   font: 600 50px/55px montserrat, arial, helvetica, sans-serif;
 }
 
@@ -513,9 +512,9 @@ body {
 }
 
 .footer__text {
-  font: 600 190px/244px montserrat, arial, helvetica, sans-serif;
+  font: 600 197px/244px montserrat, arial, helvetica, sans-serif;
   margin-top: 100px;
-  margin-left: 190px;
+  margin-left: 191px;
   color: #e51937;
   opacity: 0.1;
 }
@@ -523,7 +522,7 @@ body {
 .footer__icon {
   position: absolute;
   margin-top: 223px;
-  margin-left: -100px;
+  margin-left: -95px;
 }
 
 .footer-button {
@@ -624,6 +623,8 @@ body {
   }
 
   .main__icon {
+    margin-left: 0;
+    justify-content: center;
     margin-bottom: 0;
   }
 
@@ -787,6 +788,11 @@ body {
     height: 350px;
   }
 
+  .main__icon {
+    margin-left: 0;
+    justify-content: center;
+  }
+
   .main__row {
     width: 75%;
     margin: auto;
@@ -931,7 +937,12 @@ body {
     display: none;
   }
 
+  .menu__line {
+    display: none;
+  }
+
   .header {
+    background: no-repeat 685px 38px url(img/ipad/menu.svg);
     width: 96%;
   }
 
@@ -953,10 +964,16 @@ body {
   .main__column{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 37px;
+    margin-bottom: 39px;
   }
+
   .tesla__title {
-    margin-bottom: 85px;
+    margin-bottom: 90px;
+  }
+
+  .main__icon {
+    margin-left: 0;
+    justify-content: center;
   }
 
   .main__row {
@@ -1040,7 +1057,6 @@ body {
 
   .main2{
     background: no-repeat left 0 url(img/ipad/salon.png);
-    background-size: 950px;
     display: flex;
     flex-direction: column;
     width: 100vw;
@@ -1051,7 +1067,7 @@ body {
   }
 
   .block {
-    margin-top: 448px;
+    margin-top: 346px;
     width: 100vw;
     height: 487px;
   }
@@ -1072,7 +1088,7 @@ body {
   }
 
   .block__functions {
-    margin-right: 65px;
+    margin-right: 82px;
   }
 
   .block__display {
@@ -1080,13 +1096,15 @@ body {
   }
 
   .display {
-    margin-bottom: 19px;
+    margin-left: 55px;
+    margin-bottom: 20px;
+    margin-top: 53px;
   }
 
   .display__title {
-  margin-top: 3px;
-  margin-right: 10px;
-  margin-left: 55px;
+    margin-top: 3px;
+    margin-right: 10px;
+    margin-left: 55px;
   }
 
   .display__subtitle {
@@ -1094,13 +1112,13 @@ body {
   }
 
   .distance__item {
-    margin-left: 53px;
+    margin-left: 54px;
   }
 
   .wifi {
     background: no-repeat left 18px url(img/wifi.svg);
-    margin-left: 45px;
-    margin-bottom: 22px;
+    margin-left: 50px;
+    margin-bottom: 25px;
   }
 
   .wifi__title,
@@ -1109,22 +1127,22 @@ body {
     margin-top: 2px;
   }
 
-  .volume {
-    margin-left: 45px;
+  .block-volume {
+    margin-left: 65px;
   }
 
   .section-button {
     display: flex;
     justify-content: space-between;
-    margin-top: 56px;
+    margin-top: 52px;
     width: 60%;
     background: no-repeat left url(img/ipad/more.svg);
   }
 
   .text__button {
     font: 700 16px/20px montserrat, arial, helvetica, sans-serif;
-    margin-left: 45px;
-    margin-top: 15px;
+    margin-left: 44px;
+    margin-top: 18px;
   }
 
   .buy__button {
@@ -1141,7 +1159,7 @@ body {
     order: 2;
     width: 100vw;
     height: 487px;
-    margin-top: 40px;
+    margin-top: 38px;
   }
 
   .footer__item {
@@ -1159,7 +1177,7 @@ body {
   }
 
   .footer__subtitle {
-    margin-top: 10px;
+    margin-top: 13px;
   }
 
   .footer__info {
@@ -1172,12 +1190,16 @@ body {
   }
 
   .location {
-    margin-top: 27px;
+    margin-top: 29px;
     margin-left: 72px;
   }
 
   .quality {
     padding-right: 40px;
+  }
+
+  .rack {
+    font-size: 12px;
   }
 
   .front {
@@ -1188,13 +1210,13 @@ body {
     display: flex;
     justify-content: space-between;
     background: no-repeat left url(img/ipad/more.svg);
-    margin-top: 58px;
+    margin-top: 56px;
     width: 60%;
   }
 
   .more__button {
-    margin-top: 15px;
-    margin-left: 45px;
+    margin-top: 17px;
+    margin-left: 44px;
     font: 700 16px/20px montserrat, arial, helvetica, sans-serif;
   }
 
@@ -1212,9 +1234,9 @@ body {
 
   .footer__text {
     z-index: -1;
-    font: 600 162px/180px montserrat, arial, helvetica, sans-serif;
+    font: 600 149px/180px montserrat, arial, helvetica, sans-serif;
     margin-top: 40px;
-    margin-left: 100px;
+    margin-left: 82px;
   }
 
   .item1 {
@@ -1319,6 +1341,8 @@ body {
   .main__icon {
     background-size: 100vw;
     margin-bottom: 7px;
+    margin-left: 0;
+    justify-content: center;
   }
 
   .main__row {
@@ -1594,6 +1618,8 @@ body {
   }
 
   .main__icon {
+    margin-left: 0;
+    justify-content: center;
     margin-bottom: 7px;
   }
 
@@ -1783,7 +1809,7 @@ body {
   }
 }
 
-@media (max-width: 375px) {
+@media screen and (min-width: 100px) and (max-width: 375px) {
   .wrapper {
     width: 100vw;
   }
@@ -1807,7 +1833,7 @@ body {
   }
 
   .menu-ru {
-    margin-top: 20px;
+    margin-top: 19px;
   }
 
   .menu__line {
@@ -1819,16 +1845,18 @@ body {
   }
 
   .main__title {
-    margin-top: 20px;
+    height: 60px;
+    margin-top: 24px;
     font: 600 50px/61px montserrat, arial, helvetica, sans-serif;
   }
 
   .main__subtitle {
+    margin-bottom: 11px;
     font: 500 10px/12px montserrat, arial, helvetica, sans-serif;
   }
 
   .tesla-main {
-    margin: 34px 0 -4px 0;
+    margin: 37px 0 -4px 0;
     height: 166px;
   }
 
@@ -1839,7 +1867,9 @@ body {
   }
 
   .main__icon {
-    margin-bottom: 7px;
+    margin-left: 0;
+    justify-content: center;
+    margin-bottom: 6px;
   }
 
   .main__column {
@@ -1902,14 +1932,14 @@ body {
   }
 
   .main-text__button {
-    margin-top: 10px;
+    margin-top: 12px;
     margin-right: 15px;
     margin-left: 30px;
   }
 
   .main-buy__button {
     margin-top: 0;
-    padding: 10px 43px;
+    padding: 10px 40px;
     color: #fff;
     outline: solid 2px #fff;
     background: #e51937;
@@ -1932,7 +1962,7 @@ body {
   }
 
   .block {
-    margin-top: 202px;
+    margin-top: 200px;
     width: 100vw;
     height: 304px;
   }
